--- a/styles.css
+++ b/styles.css
@@ -6,84 +6,150 @@ h2{
 }
 *{
     background-color: cyan;
+    border-radius: 100%;
 }
-
 #cabeza{
+    position:relative;
     margin: auto;
     width: 50%;
     padding: 10px;
     width:250px;
     height: 250px;
     background-color: brown ;   
-    transform: rotate(45deg);
-    border-radius: 100%;
+    border-color: black;
+    border-style:solid;
 }
 #cuerpo{
     margin: auto;
+    display:flex;
     width: 50%;
     padding: 10px;
     width:500px;
-    height:500px;
+    height:550px;
     background-color: brown;
-    transform:rotate(45deg);
-    border-radius: 100%;
+    border-color: black;
+    border-style:solid;
 }
 #panza{
     position: relative;
-    top:50px;
-    right: 32px;
-    left: 45px;
-    width:400px;
-    height: 380px;
+    margin:auto;
+    width:380px;
+    height: 400px;
     background-color: rgb(99, 25, 25);
-    transform:rotate(45deg);
-    border-radius: 100%;
+    border-color: black;
+    border-style:solid;
 }
 #ojo1{
     position:relative;
-    top:15ch;
-    left:30px;
+    top:25%;
+    left:20%;
     width:50px;
-    height:50px;
-    background-color: rgb(0, 0, 0);
-    transform:rotate(45deg);
-    border-radius: 100%;
+    height: 50px;
+    display:inline-block;
+    background-color: rgb(255, 255, 255);
+    border-color: black;
+    border-style:solid;
 }
 #ojo2{
     position:relative;
-    top:-4ch;
-    left:135px;
+    left:40%;
+    top:25%;
     width:50px;
-    height:50px;
-    background-color: rgb(0, 0, 0);
-    transform:rotate(45deg);
-    border-radius: 100%;
+    height: 50px;
+    display:inline-block;
+    background-color: rgb(255, 255, 255);
+    border-color: black;
+    border-style:solid;
+}
+#pupila1{
+    position:relative;
+    margin:auto;
+    width:20px;
+    height: 20px;
+    background-color: black;
+    border-color: black;
+    border-style:solid;
+}
+#pupila2{
+    position:relative;
+    margin:auto;
+    width:20px;
+    height: 20px;
+    background-color: black;
+    border-color: black;
+    border-style:solid;
 }
 #nariz{
     position:relative;
-    top:0ch;
-    left:47%;
-    right: 50%;
-    width:30px;
-    height: 30px;
+    top:30%;
+    margin:auto;
+    width:40px;
+    height: 40px;
     background-color: black;
-    border-radius: 100%;
+    border-color: black;
+    border-style:solid;
 }
 #boca{
     position:relative;
-    top:5ch;
-    left: 49%;
-    right: 50%;
-    width: 40px;
-    height: 40px;
-    background-color: red;
-    border-radius: 100%;
-    
+    top:40%;
+    width: 60px;
+    height: 60px;
+    margin:auto;
+    background-color: rgb(0, 0, 0);
 }
-#oreja1{
-    position:absolute;
-    width:70px;
-    height:70px;
+#teddy{
+    position:relative;
+}
+#oreja1, #oreja2 {
+    width: 80px; 
+    height: 80px; 
     background-color: brown;
-    border-radius:100%;
+    position:absolute; 
+    border-color: black;
+    border-style:solid;
+}
+
+#oreja1 {
+    left: calc(50% - 150px); 
+}   
+#oreja2 {
+    right: calc(50% - 150px); 
+}
+#mano1, #mano2 {
+    width: 200px; 
+    height: 150px; 
+    background-color: brown;
+    position: absolute; 
+    border-color: black;
+    border-style:solid;
+    z-index: 9999;
+}
+#mano1 {
+    left: calc(50% - 300px); 
+    top: 45%; 
+    transform: translateY(-50%); 
+}
+
+#mano2 {
+    right: calc(50% - 300px); 
+    top: 45%; 
+    transform: translateY(-50%); 
+}
+#pata1, #pata2 {
+    width: 200px; 
+    height: 250px; 
+    background-color: brown;
+    position: absolute;
+    border-color: black;
+    border-style:solid;
+}
+#pata1 {
+    left: calc(50% - 310px); 
+    top: 90%;
+    transform: translateY(-50%);
+}
+#pata2 {
+    right: calc(50% - 310px); 
+    top: 90%; 
+    transform: translateY(-50%); 
 }
