--- a/styles.css
+++ b/styles.css
@@ -1,155 +1,97 @@
+*{
+    background-color: beige;
+}
 h1{
     text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
-h2{
-    text-align: center;
-}
-*{
-    background-color: cyan;
-    border-radius: 100%;
-}
-#cabeza{
-    position:relative;
-    margin: auto;
-    width: 50%;
-    padding: 10px;
-    width:250px;
-    height: 250px;
-    background-color: brown ;   
-    border-color: black;
-    border-style:solid;
-}
-#cuerpo{
-    margin: auto;
-    display:flex;
-    width: 50%;
-    padding: 10px;
-    width:500px;
-    height:550px;
-    background-color: brown;
-    border-color: black;
-    border-style:solid;
-}
-#panza{
-    position: relative;
+.main{
     margin:auto;
-    width:380px;
+    width:900px;
+    height:600px;
+    border-style: groove;
+    border-color: brown;
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+#box0{
+    margin-right: 15px;
+    width: 150px;
     height: 400px;
-    background-color: rgb(99, 25, 25);
-    border-color: black;
-    border-style:solid;
+    border-style: groove;
+    border-color: blue;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
-#ojo1{
-    position:relative;
-    top:25%;
-    left:20%;
-    width:50px;
+#box1{
+    margin-right: 15px;
+    width:300px;
+    height:400px;
+    border-style: groove;
+    border-color: blue;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+#box2{
+    margin-right: 15px;
+    width:200px;
+    height:400px;
+    border-style: groove;
+    border-color: blue;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.cb1 {
+    width: 50px;
     height: 50px;
-    display:inline-block;
-    background-color: rgb(255, 255, 255);
-    border-color: black;
-    border-style:solid;
+    border-color: red;
+    border-style: groove;
+    margin: 5px; 
+    margin-bottom: 10px;
 }
-#ojo2{
-    position:relative;
-    left:40%;
-    top:25%;
-    width:50px;
+.cb2{
+    width: 50px;
     height: 50px;
-    display:inline-block;
-    background-color: rgb(255, 255, 255);
-    border-color: black;
-    border-style:solid;
+    border-color:cyan;
+    border-style: groove;
+    margin: 5px; 
 }
-#pupila1{
-    position:relative;
-    margin:auto;
-    width:20px;
-    height: 20px;
-    background-color: black;
-    border-color: black;
-    border-style:solid;
-}
-#pupila2{
-    position:relative;
-    margin:auto;
-    width:20px;
-    height: 20px;
-    background-color: black;
-    border-color: black;
-    border-style:solid;
-}
-#nariz{
-    position:relative;
-    top:30%;
-    margin:auto;
-    width:40px;
-    height: 40px;
-    background-color: black;
-    border-color: black;
-    border-style:solid;
-}
-#boca{
-    position:relative;
-    top:40%;
-    width: 60px;
-    height: 60px;
-    margin:auto;
-    background-color: rgb(0, 0, 0);
-}
-#teddy{
-    position:relative;
-}
-#oreja1, #oreja2 {
-    width: 80px; 
-    height: 80px; 
-    background-color: brown;
-    position:absolute; 
-    border-color: black;
-    border-style:solid;
-}
+.cb31{
+    width:50px;
+    height:50px;
+    border-color:yellowgreen;
+    border-style: groove;
+    flex-grow: 5;
+    
 
-#oreja1 {
-    left: calc(50% - 150px); 
-}   
-#oreja2 {
-    right: calc(50% - 150px); 
 }
-#mano1, #mano2 {
-    width: 200px; 
-    height: 150px; 
-    background-color: brown;
-    position: absolute; 
-    border-color: black;
-    border-style:solid;
-    z-index: 9999;
+.cb32{
+    width:50px;
+    height:70px;
+    border-color:yellowgreen;
+    border-style: groove;
 }
-#mano1 {
-    left: calc(50% - 300px); 
-    top: 45%; 
-    transform: translateY(-50%); 
-}
-
-#mano2 {
-    right: calc(50% - 300px); 
-    top: 45%; 
-    transform: translateY(-50%); 
-}
-#pata1, #pata2 {
-    width: 200px; 
-    height: 250px; 
-    background-color: brown;
-    position: absolute;
-    border-color: black;
-    border-style:solid;
-}
-#pata1 {
-    left: calc(50% - 310px); 
-    top: 90%;
-    transform: translateY(-50%);
-}
-#pata2 {
-    right: calc(50% - 310px); 
-    top: 90%; 
-    transform: translateY(-50%); 
+@media screen and (max-width: 600px) {
+    .main {
+        flex-direction: column; 
+        height: auto; 
+    }
+    #box1{
+        flex-direction: column;
+        height:auto;
+    }
+    #box0, #box1, #box2 {
+        margin-bottom: 15px; 
+    }
+    
 }
